<resources>
    <!--
Author: Alex La
Student Id: n01313354
Section: RNA
-->
    <string name="app_name">AlexLab3</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Information">Information</string>
    <string name="permission_required">Permission required to sent SMS</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dateformat">\nHH:mm:ss \nyyyy-MM-dd</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="firstname">Alex</string>
    <string name="lastname">La</string>
    <string name="enter_zip_code">Enter Zip Code</string>
    <string name="student_number">N01313354</string>
    <string name="list_of_courses">List of courses</string>
    <string name="messages_channel_name">my_notification_channel</string>
    <string name="notification_title">Person Detected</string>

    <string-array name="fontSize">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>

    <string-array name="courses">
        <item>GNED</item>
        <item>Algorithms and Data</item>
        <item>Software Project</item>
        <item>Hardware Production</item>
        <item>Network Programming</item>
    </string-array>
</resources>